# DeadLinks

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
src/: check_site.py
src/deadlinks/: checksite.py
src/linkchecking/: checksite.py
tests/: test_cli.py
tests/unit/: test_check_site.py  test_checksite.py
