[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deadlinks"
version = "0.0.1"
authors = [
  { name="Viktor Rehnberg", email="viktor.rehnberg@chalmers.se" },
]
description = "A command utility for checking a site for dead links"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "beautifulsoup4",
    "colorama",
    "requests",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "build",
]

[project.urls]
Homepage = "https://github.com/VRehnberg/DeadLinks"
Issues = "https://github.com/VRehnberg/DeadLinks/issues"
