[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linkchecking"
version = "0.0.1"
authors = [
  { name="Viktor Rehnberg", email="viktor.rehnberg@chalmers.se" },
]
description = "A command utility for checking a site for dead links"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "beautifulsoup4",
    "requests",
    "termcolor",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "build",
]

[project.urls]
Homepage = "https://github.com/VRehnberg/LinkChecking"
Issues = "https://github.com/VRehnberg/LinkChecking/issues"
